add scripts page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
  |          currently here         |
  -----------------------------------
  |         content by <a href="https://m.transcendent.ink">Mia</a>         |
+ |             <a href="https://s.transcendent.ink">scripts</a>             |
  -----------------------------------
  
  -----------------------------------
