--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
  -----------------------------------
  |         content by <a href="https://m.transcendent.ink">Mia</a>         |
  |             <a href="https://s.transcendent.ink">scripts</a>             |
+ |       stuff i've <a href="https://w.transcendent.ink">written</a>       |
  -----------------------------------
  
  -----------------------------------
